fixed style on Home page, center align plus lighter font

--- a/src/client/home/Home.scss
+++ b/src/client/home/Home.scss
@@ -8,6 +8,8 @@
   flex-direction: column;
   height: 100%;
   max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
 
   .section-main {
     margin-top: 8rem;
